index.css
@import "./CSS//mainMenu.css";
@import "./CSS/startScreen.css";
@import "./CSS/linksScreen.css";
@import "./CSS/aboutMeScreen.css";
@import "./CSS/projectsScreen.css";
@import "./CSS//projectScreen.css";

* {
    -moz-box-sizing: border-box;
    /* Firexfox */
    -webkit-box-sizing: border-box;
    /* Safari/Chrome/iOS/Android */
    box-sizing: border-box;
    /* IE */
}

body {
    /* position: relative; */
    width: 100%;
    height: 100%;
    background-color: black;
    margin: auto;
    orientation: landscape;
}

.Screen {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: black;
    display: none;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    /* border: white dashed 5px; */
}

.BackgroundImg {
    position: absolute;
    /* width: 100%; */
    width: 100%;
    
    
    filter: opacity(50%) blur(0.1vw) hue-rotate(50deg);
    background-size: auto;
    pointer-events:none;
    z-index: 0;
}

.ItemPreviewTitle {
    /* position: absolute; */
    border: rgb(212, 1, 114) 0.4vw groove;
    background-color: rgb(122, 0, 65);
    position: absolute;
    top: -5%;
    /* height: 25%; */

    width: 75%;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items:center ;
    justify-content: center;
}

.ItemPreviewTitle p{
    /* position: relative;
    top: -50%; */
    text-align: center;
    color: white;
    font-size: 4vh;
    /* background-color: blue; */
    /* width: 100%; */
    height: 25%;
    margin: 0 5vh 0 5vh;
}

.hexagon {
    height: auto;
    stroke: rgb(116, 0, 62);
    stroke-width: 50;
}

.hexagon:hover {
    stroke: rgb(216, 0, 115);
    cursor: pointer;
}

.hexagon:active {
    stroke: gold;
    fill: white;
}

.unavailable {
    stroke: rgb(124, 1, 1);
}

.unavailable:hover {
    stroke: rgb(182, 1, 1);
    cursor: not-allowed;
}

.unavailable:active {
    stroke: red;
    fill: black;
}


.option {
    stroke: rgb(0, 0, 0);
    stroke-width: 25;
}

.optionHover  {
    stroke: gold;
    animation: optionBorderAnimate 0.75s ease-in-out infinite alternate;
}

.option:hover  {
    animation: optionBorderAnimate 0.75s ease-in-out infinite alternate;
}

 @keyframes optionBorderAnimate {
    from {
        stroke: gold;
    }
    to {
        
        stroke: rgb(122, 104, 0);
    }
  }

.option:active  {
    stroke: gold;
    fill: white;
}
.optionClick  {
    stroke: gold;
    fill: white;
}


svg .previewStatic {
    /* filter: hue-rotate(99deg); */
    opacity: 0.8;
}

@media screen and (orientation: portrait) {
    body {
      /* Rotate the content container */
      transform: rotate(90deg);
      transform-origin: right top;
      /* Set content width to viewport height */
      width: 100vh;
      /* Set content height to viewport width */
      height: 100vw;
      overflow-x: hidden;
      position: absolute;
      top: 100%;
      right: 0;
    }

    .ItemPreviewTitle p{
        
        font-size: 5vw;
        
    }

    .BackgroundImg {
        height: 100%;
        width: auto;
        

    }
  }

  .arrowContainer {
    position: absolute;
    /* background-color: blue; */
    /* left: 2.5%; */
    top: 5%;
    height: 10%;
    width: 100%;
    z-index: 2;
}

p, text {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Old versions of Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome, Edge, Opera and Firefox */
  }

  text{
      cursor: pointer;
  }

